# goserver/policies/policies_manual.go
@@ -15,6 +15,6 @@ func init() {
 	beego.Policy("/api/user/email/smtpserver/*", "*", IsAuthorized)
 	beego.Policy("/api/user/email/*", "*", IsAuthorized)
 	beego.Policy("/api/soundparsing/*", "*", IsAuthorized)
-	beego.Policy("/api/botmessanger/*", "*", IsAuthorized)
+	beego.Policy("/api/botmessenger/*", "*", IsAuthorized)
 	beego.Policy("/api/tphomecontrol/*", "*", IsAuthorized)
 }
